--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,31 @@
 name: CI
+
 on:
   pull_request:
-    branches: [ "main" ]
   push:
-    branches: [ "feat/**", "fix/**", "ci/**" ]
+    branches: [ main ]
+
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: python -m pip install -U pip
-      - run: pip install fastapi uvicorn[standard] pydantic sqlalchemy alembic python-multipart httpx pytest
-      - run: uvicorn backend.app.main:app --host 127.0.0.1 --port 8000 &
-      - run: sleep 2
-      - run: pytest -q
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -U pip
+          pip install fastapi uvicorn[standard] pydantic sqlalchemy alembic python-multipart httpx pytest
+      - name: Run tests
+        env:
+          # Ensure any relative imports work from repo root
+          PYTHONPATH: .
+        run: |
+          pytest -q
+
