--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,31 @@
 name: CI
 
 on:
-  pull_request:
   push:
-    branches: [ main ]
+    branches: [ main, feat/**, ci/** ]
+  pull_request:
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          pip install fastapi uvicorn[standard] pydantic sqlalchemy alembic python-multipart httpx pytest
+          pip install -r requirements-test.txt
+
       - name: Run tests
         env:
-          # Ensure any relative imports work from repo root
-          PYTHONPATH: .
+          API_KEY: dev-secret-123
+          DATABASE_URL: sqlite:///./dev.db
         run: |
+          mkdir -p storage
           pytest -q
 
