--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    env:
+      API_KEY: dev-secret-123
+      DATABASE_URL: sqlite:///./dev.db
+
     steps:
       - uses: actions/checkout@v4
 
@@ -21,10 +26,19 @@ jobs:
           python -m pip install -U pip
           pip install -r requirements-test.txt
 
+      - name: Start API (background) and wait for /healthz
+        run: |
+          uvicorn backend.app.main:app --host 127.0.0.1 --port 8000 &
+          for i in {1..40}; do
+            if curl -fsS http://127.0.0.1:8000/healthz >/dev/null; then
+              echo "API is up"
+              break
+            fi
+            echo "Waiting for API..."
+            sleep 0.5
+          done
+
       - name: Run tests
-        env:
-          API_KEY: dev-secret-123
-          DATABASE_URL: sqlite:///./dev.db
         run: |
           mkdir -p storage
           pytest -q
