dev: helper functions + runtime aggregator; docs sync

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,27 @@
+# --- App env ---
 APP_ENV=dev
-API_PORT=8000
-FRONTEND_PORT=8501
+API_KEY=dev-secret-123
 
-DB_HOST=db
+# By default, use a local SQLite file (what tests/CI expect)
+DATABASE_URL=sqlite:///./dev.db
+
+# Uncomment to use Postgres instead (example):
+# DATABASE_URL=postgresql+psycopg://mna:mna@localhost:5432/mna
+
+# --- Optional server settings ---
+UVICORN_HOST=127.0.0.1
+UVICORN_PORT=8000
+FRONTEND_PORT=8501
+STORAGE_DIR=storage
+LOG_LEVEL=info
+
+# --- OpenAI (leave blank or replace when needed; do NOT commit real secrets) ---
+OPENAI_API_KEY=changeme
+
+# --- If you prefer separate PG vars (not required when using DATABASE_URL) ---
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=mna
 DB_PASSWORD=mna
 DB_NAME=mna
 
-OPENAI_API_KEY=changeme
