--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
-script_location = backend/alembic
-sqlalchemy.url = driver://user:pass@localhost/dbname
+script_location = %(here)s/alembic
+sqlalchemy.url = sqlite:///./dev.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
