--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -48,14 +48,13 @@ mako==1.3.10
     # via alembic
 markupsafe==3.0.3
     # via mako
-minio==7.2.17
     # via mna-backend (backend/pyproject.toml)
 packaging==25.0
     # via pytesseract
-pillow==11.3.0
     # via
     #   mna-backend (backend/pyproject.toml)
     #   pytesseract
+    # via mna-backend (backend/pyproject.toml)
 psycopg2-binary==2.9.10
     # via mna-backend (backend/pyproject.toml)
 pycparser==2.23
@@ -69,7 +68,6 @@ pydantic==2.11.9
     #   pydantic-settings
 pydantic-core==2.33.2
     # via pydantic
-pydantic-settings==2.11.0
     # via mna-backend (backend/pyproject.toml)
 pytesseract==0.3.13
     # via mna-backend (backend/pyproject.toml)
@@ -81,6 +79,9 @@ python-multipart==0.0.20
     # via mna-backend (backend/pyproject.toml)
 pyyaml==6.0.3
     # via uvicorn
+    # via rq
+rq==1.16.2
+    # via mna-backend (backend/pyproject.toml)
 sniffio==1.3.1
     # via anyio
 sqlalchemy==2.0.43
@@ -119,3 +120,13 @@ websockets==15.0.1
 # openai==<pin-here>
 # boto3==<pin-here>
 
+prometheus-fastapi-instrumentator==7.0.0
+openai==1.51.2
+minio==7.2.17
+redis==5.0.8
+prometheus-client==0.21.0
+pydantic-settings==2.11.0
+pillow==11.3.0
+sumy==0.11.0
+transformers==4.44.2
+nltk==3.9.1
