--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,18 +1,22 @@
 services:
-  db:
+  backend:
     volumes:
-      - ./backups:/backups:ro
-
-  pg_backup:
-    image: postgres:16
+      - ./backend:/app/backend
     depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      PGURL: postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
-      BACKUP_INTERVAL_SECS: "86400"
+      - redis
+
+  worker:
+    image: meeting-notes-assistant-backend   # reuse backend image
+    command: python -m worker.worker         # run RQ worker
     volumes:
-      - ./ops:/ops:ro
-      - ./backups:/backups
-    entrypoint: ["/bin/bash","-lc","/ops/pg-backup.sh; while true; do sleep ${BACKUP_INTERVAL_SECS:-86400}; /ops/pg-backup.sh; done"]
-    restart: unless-stopped
+      - ./backend:/app/backend
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:7-alpine
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
