--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           sudo apt-get install -y jq imagemagick curl
 
       - name: Boot stack
-        run: docker compose up -d
+        run: docker compose up -d --build
 
       - name: Wait for API (/healthz)
         run: |
