--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install test tools (jq, ImageMagick, curl)
+      - name: Compose config (debug)
+        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml config
         run: |
           sudo apt-get update
           sudo apt-get install -y jq imagemagick curl
 
       - name: Boot stack
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d --build
+        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml up -d --build
 
       - name: Wait for API (/healthz)
         run: |
