--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 name: CI
-
 on:
   push:
   pull_request:
@@ -30,11 +29,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install test tools (jq, ImageMagick, curl)
-      - name: Compose config (debug)
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml config
         run: |
           sudo apt-get update
           sudo apt-get install -y jq imagemagick curl
+
+      - name: Compose config (debug)
+        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml config
 
       - name: Boot stack
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml up -d --build
@@ -43,9 +43,9 @@ jobs:
         run: |
           set -euo pipefail
           for i in {1..60}; do
-            if curl -fsS http://localhost:8000/healthz >/dev/null 2>&1 ||                curl -fsS http://localhost:8000/docs >/dev/null 2>&1; then
-              echo "API is up"
-              exit 0
+            if curl -fsS http://localhost:8000/healthz >/dev/null 2>&1 || \
+               curl -fsS http://localhost:8000/docs    >/dev/null 2>&1; then
+              echo "API is up"; exit 0
             fi
             echo "[wait] API not up yet; showing ps + last 80 lines of backend logs"
             docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml ps || true
@@ -69,9 +69,7 @@ jobs:
           for i in {1..60}; do
             S=$(curl -fsS http://localhost:8000/v1/jobs/$JOB | jq -r .status)
             echo "status=$S"
-            if [ "$S" = "finished" ]; then
-              break
-            fi
+            [ "$S" = "finished" ] && break
             sleep 2
           done
 
@@ -86,9 +84,9 @@ jobs:
       - name: Show container logs (always)
         if: always()
         run: |
-          docker compose ps
-          docker compose logs --no-color --timestamps || true
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml ps
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml logs --no-color --timestamps || true
 
       - name: Tear down (always)
         if: always()
-        run: docker compose down -v
+        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml down -v
