--- a/docker-compose.override.ci.yml
+++ b/docker-compose.override.ci.yml
@@ -1,37 +1,49 @@
 services:
-  redis:
-    image: redis:7-alpine
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
-
-  # one-shot DB init (SQLite file)
   dbinit:
-    build:
-      context: .
-      dockerfile: backend/Dockerfile
+    image: meeting-notes-assistant-backend:latest
+    working_dir: /app/backend
     environment:
-      DATABASE_URL: "${DATABASE_URL:-sqlite:///./dev.db}"
-    command: ["python", "-m", "app.ci_init_db"]
+      DATABASE_URL: "sqlite:////app/backend/storage/app.db"
+      PYTHONPATH: "/app/backend"
     volumes:
-      - ./backend:/app/backend
-      - ./storage:/app/storage
+      - ./storage:/app/backend/storage
+    entrypoint: ["/bin/bash","-lc"]
+    command: |
+      set -eu
+      echo "[dbinit] Python: $(python -V)"
+      echo "[dbinit] Using DATABASE_URL=${DATABASE_URL}"
+      test -f alembic.ini || { echo "[dbinit] ERROR: alembic.ini not found"; ls -la; exit 1; }
+      python - <<'PY'
+      import os
+      from alembic.config import Config
+      from alembic import command
+      cfg = Config("alembic.ini")
+      url = os.environ.get("DATABASE_URL")
+      if url:
+          cfg.set_main_option("sqlalchemy.url", url)
+          print("[dbinit] sqlalchemy.url set from env:", url)
+      print("[dbinit] Running Alembic upgrade head…")
+      command.upgrade(cfg, "head")
+      print("[dbinit] Migrations complete")
+      PY
 
   backend:
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-    ports: ["8000:8000"]
-    environment:
-      REDIS_URL: "redis://redis:6379"
-      DATABASE_URL: "${DATABASE_URL:-sqlite:///./dev.db}"
     depends_on:
-      redis:
-        condition: service_healthy
       dbinit:
         condition: service_completed_successfully
-    healthcheck:
-      test: ["CMD", "curl", "-fsS", "http://localhost:8000/healthz"]
-      interval: 5s
-      timeout: 3s
-      retries: 25
+    volumes:
+      - ./storage:/app/backend/storage
+
+  api:
+    depends_on:
+      dbinit:
+        condition: service_completed_successfully
+    volumes:
+      - ./storage:/app/backend/storage
+
+  worker:
+    depends_on:
+      dbinit:
+        condition: service_completed_successfully
+    volumes:
+      - ./storage:/app/backend/storage
