--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,44 +1,12 @@
-name: Lint & Type Check
-
-on:
-  push:
-    branches: [ "**" ]
-  pull_request:
-    branches: [ "**" ]
-
+name: Lint & type-check
+on: [push, pull_request]
 jobs:
-  lint:
+  precommit:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-
-      - name: Install deps
-        run: |
-          python -m pip install -U pip
-          # Your project deps (tests file is fine) + dev tools
-          if [ -f requirements-test.txt ]; then pip install -r requirements-test.txt; fi
-          pip install ruff mypy types-requests
-
-      - name: Ruff (lint)
-        run: |
-          ruff version
-          # Fail on lint violations
-          ruff check .
-
-      - name: Ruff (format check)
-        run: |
-          # Confirms code is formatted; remove --check to auto-format locally
-          ruff format --check .
-
-      - name: MyPy
-        run: |
-          mypy --version
-          mypy backend || { echo "mypy soft-fail; see logs"; true; }
-
+          python-version: '3.11'
+      - run: python -m pip install pre-commit
+      - run: pre-commit run --all-files
