docker: add HEALTHCHECK for backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,3 +6,7 @@ COPY backend /app/backend
 WORKDIR /app/backend
 EXPOSE 8000
 CMD ["uvicorn", "app.main:app", "--host","0.0.0.0","--port","8000"]
+
+HEALTHCHECK --interval=5s --timeout=2s --retries=20 \
+  CMD curl -fs http://127.0.0.1:8000/healthz || exit 1
+
