--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,10 +7,7 @@ WORKDIR /app/backend
 EXPOSE 8000
 CMD ["uvicorn", "app.main:app", "--host","0.0.0.0","--port","8000"]
 
-  CMD curl -fs http://127.0.0.1:8000/healthz || exit 1
 
-  CMD python -c "import sys,urllib.request; u='http://127.0.0.1:8000/healthz'; \
 sys.exit(0 if urllib.request.urlopen(u, timeout=3).getcode()==200 else 1)"
-HEALTHCHECK --interval=15s --timeout=5s --retries=6 --start-period=10s \
-  CMD python -c "import sys,urllib.request; u='http://127.0.0.1:8000/healthz'; \
 sys.exit(0 if urllib.request.urlopen(u, timeout=3).getcode()==200 else 1)"
+HEALTHCHECK --interval=15s --timeout=5s --retries=6 --start-period=10s CMD python -c "import sys,urllib.request; sys.exit(0 if urllib.request.urlopen('http://127.0.0.1:8000/healthz', timeout=3).getcode()==200 else 1)"
