--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,3 +11,6 @@ CMD ["uvicorn", "app.main:app", "--host","0.0.0.0","--port","8000"]
 sys.exit(0 if urllib.request.urlopen(u, timeout=3).getcode()==200 else 1)"
 sys.exit(0 if urllib.request.urlopen(u, timeout=3).getcode()==200 else 1)"
 HEALTHCHECK --interval=15s --timeout=5s --retries=6 --start-period=10s CMD python -c "import sys,urllib.request; sys.exit(0 if urllib.request.urlopen('http://127.0.0.1:8000/healthz', timeout=3).getcode()==200 else 1)"
+
+# CI: ensure alembic is present
+RUN pip install --no-cache-dir alembic
