--- a/docker-compose.alembic.ci.yml
+++ b/docker-compose.alembic.ci.yml
@@ -2,6 +2,8 @@ services:
   backend:
     environment:
       - DATABASE_URL=${DATABASE_URL}
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
     entrypoint: []
     command: >
       sh -lc "
