--- a/docker-compose.alembic.ci.yml
+++ b/docker-compose.alembic.ci.yml
@@ -1,15 +1,9 @@
 services:
   backend:
     environment:
-      - DATABASE_URL=${DATABASE_URL}
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
+      APP_ENV: dev
+      DATABASE_URL: ${DATABASE_URL:-sqlite:////app/backend/dev.db}
     entrypoint: []
     command: >
-      sh -lc "
-      alembic -c backend/alembic.ini upgrade head ||
-      alembic -c alembic.ini upgrade head ||
-      python -m alembic -c backend/alembic.ini upgrade head ||
-      python -m alembic -c alembic.ini upgrade head;
-      exec uvicorn app.main:app --host 0.0.0.0 --port 8000
-      "
+      sh -lc " alembic -c backend/alembic.ini upgrade head || alembic -c alembic.ini upgrade head || python -m alembic -c backend/alembic.ini upgrade head || python -m alembic -c alembic.ini upgrade head; exec uvicorn app.main:app --host 0.0.0.0 --port 8000 "
+
