ci(smoke): move storage prep after checkout; avoid sudo; clean checkout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,16 @@ jobs:
     env:
       DATABASE_URL: sqlite:////app/backend/dev.db
     steps:
+      - uses: actions/checkout@v4
+        with:
+          clean: true
       - name: Prepare writable storage
         run: |-
           set -euxo pipefail
-          sudo rm -rf storage || true
-          sudo install -d -m 0777 storage/1
+          rm -rf storage || true
+          mkdir -p storage/1
+          chmod -R 0777 storage
           ls -ld storage storage/1
-      - uses: actions/checkout@v4
       - name: Install test tools (jq, ImageMagick, curl)
         run: |
           sudo apt-get update
